# glove-rs

./: Cargo.toml  README.md  demo.sh
src/: crec.rs  lib.rs  word_vectors.rs
