[package]
name = "glove-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = {version = "1.23.1", features = ["derive"]}
byteorder = "1.5.0"
chrono = "0.4.41"
clap = {version = "4.4", features = ["derive"]}
ndarray = "0.16.1"
rand = "0.9.1"
#bytemuck = { version = "1.14", features = ["derive"] }
